Fixed Extra margin

--- a/src/pages/NewPage.css
+++ b/src/pages/NewPage.css
@@ -1,12 +1,12 @@
 .n-content {
-  width: 104%;
+  width: 100%;
   height: 94vh;
   background: rgba(0, 0, 0, 0.89);
   position: relative;
   transition: ease-in-out 1s;
   transform-origin: bottom;
-  margin-left: 2rem;
-  margin-top: 2rem;
+  margin-left: 4rem;
+  margin-top: 5rem;
   z-index: 1100;
 }
 
@@ -15,7 +15,6 @@
   background-color: rgba(0, 0, 0, 0.486);
   backdrop-filter: blur(5px);
   left: 0;
-  margin-left: 0rem;
   position: absolute;
   width: 85%;
   height: 100%;
@@ -33,8 +32,9 @@
 
 .download-sec {
   position: absolute;
-  margin-top: 3rem;
+  margin-top: 1rem;
   margin-left: 2rem;
+  margin-right: 4rem;
   padding: 2rem;
   width: 500px;
   height: 400px;
@@ -179,13 +179,13 @@ h2 {
 }
 
 .feedback {
-  width: 60%;
+  width: 58%;
   height: 420px;
   border-radius: 10px;
   padding: 20px;
   background-color: rgba(39, 36, 36, 0.774);
-  margin-top: 3rem;
-  margin-left: 35rem;
+  margin-top: 0rem;
+  margin-left: 36rem;
 }
 
 .feedback a {
@@ -233,7 +233,7 @@ h2 {
   margin-top: 5rem;
   margin-left: 2rem;
   width: 100%;
-  height: 310px;
+  height: 300px;
 }
 
 .more-movies .box2 .box2-img img {
@@ -280,7 +280,7 @@ h2 {
 
   .feedback {
     margin-left: 26rem;
-    margin-top: 7rem;
+    margin-top: 5rem;
   }
 
   .more-movies h2 {
@@ -312,7 +312,7 @@ h2 {
     margin-left: 20rem;
     padding: 10px;
     width: 60%;
-    margin-top: 7.7rem;
+    margin-top: 4rem;
   }
 
   .feedback h2 {
@@ -403,22 +403,22 @@ h2 {
 
 @media (max-width: 810px) {
   .download-sec {
-    margin-top: 5rem;
-    padding: 1rem;
-    width: 200px;
-    height: 330px;
+    margin-top: 0rem;
+    padding: 2rem;
+    width: 250px;
+    height: 400px;
   }
 
   .download-sec a {
-    font-size: 11px;
+    font-size: 12px;
   }
 
   .download-sec span {
-    font-size: 15px;
+    font-size: 16px;
   }
 
   .feedback {
-    margin-left: 15rem;
+    margin-left: 20rem;
   }
 
   .n-img {
@@ -448,6 +448,10 @@ h2 {
   .n-img img {
     width: 280px;
     height: 460px;
+  }
+
+  .n-content {
+    margin-left: 4rem;
   }
 
   .n-img {
@@ -503,7 +507,7 @@ h2 {
     width: 104%;
     height: 400px;
     margin-left: 1rem;
-    margin-top: 30rem;
+    margin-top: 32rem;
   }
 
   .feedback input {
